# pythound

./: README.md  main.py  pyproject.toml  setup.cfg  setup.py
examples/: play_and_pause_sound.py  play_and_stop_sound.py  play_as_contextmanager.py  play_pause_and_continue_sound.py  play_single_soundfile_async.py  play_sound_endless.py  play_sound_multiple_times.py  play_sound_synced.py  play_sound_twice.py  play_soundfiles_in_parallel.py
pythound/: pythound.py  settings.py  sound_manager.py
pythound/app_configs/: ffplay_config.py
