[tool.poetry]
name = "pythound"
version = "0.7.0"
description = ""
authors = ["Tutor Exilius <tutorexilius@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
psutil = "^5.9.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
