[tool.black]
exclude = '''
/(
  | __pycache__
)/
'''

[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_explicit = true
disallow_any_generics = true
disallow_untyped_calls = true
no_implicit_optional = true
ignore_missing_imports = true
no_site_packages = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
strict_equality = true

[tool.poetry]
name = "pythound"
version = "1.5.0"
description = "An async sound library for python."
authors = ["Tutor Exilius <tutorexilius@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7"
psutil = "^5.9.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
